--- a/task13.html
+++ b/task13.html
@@ -35,7 +35,7 @@
 
             const higher = Math.max(num1, num2, num3)
 
-            output.innerHTML = higher
+            output.innerText = higher
  
         })
     </script>
