--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <title>Class 5_ All assignments</title>
 </head>
 <body>
-    <a href="/Tasks(5thclass)/task01.html">Task 1: JavaScript program to display the current day and time</a>
-    <a href="/Tasks(5thclass)/task02.html">Task 2: JavaScript program to get the current date in all 4 formats </a>
+    <a href="/Tasks(5thclass)/task01.html">Task 1: JavaScript program to display the current day and time</a><br><br>
+    <a href="/Tasks(5thclass)/task02.html">Task 2: JavaScript program to get the current date in all 4 formats </a><br><br>
     <a href="Tasks(5thclass)/task03.html">Task 3: JavaScript program to find the area of a triangle where lengths of the 
-        three of its sides are 5, 6, 7</a>
-    <a href="Tasks(5thclass)/task04.html">Task 4: JavaScript program to rotate the string 'Saylani'</a>
-    <a href="Tasks(5thclass)/task05.html">Task 5: JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.</a>
-    <a href="Tasks(5thclass)/task06.html">Task 6: JavaScript program to find 1st January is being a Sunday between 2014 and 2050</a>
-    <a href="Tasks(5thclass)/task07.html">Task 7: JavaScript program where the program takes a random Number between 1 to 10.</a>
-    <a href="Tasks(5thclass)/task08.html">Task 8: JavaScript program to calculate days left until next 14 August.</a>
-    <a href="Tasks(5thclass)/task09.html">Task 9: JavaScript program to calculate multiplication and division of two numbers.</a>
-    <a href="Tasks(5thclass)/task10.html">Task 10: JavaScript program to convert temperatures to and from Celsius, Fahrenheit</a>
+        three of its sides are 5, 6, 7</a><br><br>
+    <a href="Tasks(5thclass)/task04.html">Task 4: JavaScript program to rotate the string 'Saylani'</a><br><br>
+    <a href="Tasks(5thclass)/task05.html">Task 5: JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.</a><br><br>
+    <a href="Tasks(5thclass)/task06.html">Task 6: JavaScript program to find 1st January is being a Sunday between 2014 and 2050</a><br><br>
+    <a href="Tasks(5thclass)/task07.html">Task 7: JavaScript program where the program takes a random Number between 1 to 10.</a><br><br>
+    <a href="Tasks(5thclass)/task08.html">Task 8: JavaScript program to calculate days left until next 14 August.</a><br><br>
+    <a href="Tasks(5thclass)/task09.html">Task 9: JavaScript program to calculate multiplication and division of two numbers.</a><br><br>
+    <a href="Tasks(5thclass)/task10.html">Task 10: JavaScript program to convert temperatures to and from Celsius, Fahrenheit</a><br><br>
     <a href="Tasks(5thclass)/task11.html">Task 11: JavaScript program to compute the sum of the two given Numbers. 
-        If the two values are same, then returns triple their sum.</a>
-    <a href="Tasks(5thclass)/task12.html">Task 12: JavaScript program to check whether a given Number is within 20 of 100 or 400.</a>
-    <a href="Tasks(5thclass)/task13.html">Task 13: JavaScript program to find the largest of three given Numbers.</a>
-    <a href="Tasks(5thclass)/task14.html">Task 14: JavaScript program to capitalize the first letter of each word of a given string.</a>
-    <a href="Tasks(5thclass)/task15.html">Task 15: JavaScript program to convert a given days to hours and minutes.</a>
-    <a href="Tasks(5thclass)/task16.html">Task 16: JavaScript program to reverse the elements of a given array, you can not use Array.reverse() do it with loop</a>
+        If the two values are same, then returns triple their sum.</a><br><br>
+    <a href="Tasks(5thclass)/task12.html">Task 12: JavaScript program to check whether a given Number is within 20 of 100 or 400.</a><br><br>
+    <a href="Tasks(5thclass)/task13.html">Task 13: JavaScript program to find the largest of three given Numbers.</a><br><br>
+    <a href="Tasks(5thclass)/task14.html">Task 14: JavaScript program to capitalize the first letter of each word of a given string.</a><br><br>
+    <a href="Tasks(5thclass)/task15.html">Task 15: JavaScript program to convert a given days to hours and minutes.</a><br><br>
+    <a href="Tasks(5thclass)/task16.html">Task 16: JavaScript program to reverse the elements of a given array, you can not use Array.reverse() do it with loop</a><br><br>
     <a href="Tasks(5thclass)/task17.html">Task 17: JavaScript program to find the larger value between the first or last
-        and set all the other elements with that value. Display the new array.</a>
-    <a href="Tasks(5thclass)/task18.html">Task 18: JavaScript program to find the kth greatest element of a given array of Numbers</a>
+        and set all the other elements with that value. Display the new array.</a><br><br>
+    <a href="Tasks(5thclass)/task18.html">Task 18: JavaScript program to find the kth greatest element of a given array of Numbers</a><br><br>
     <a href="Tasks(5thclass)/task19.html">Task 19: JavaScript program to find the number which appears most in a given array of Numbers.
-    </a>
-    <a href="Tasks(5thclass)/task20.html">Task 20: JavaScript program to replace all the numbers with a specified number of a given array of Numbers.</a>
+    </a><br><br>
+    <a href="Tasks(5thclass)/task20.html">Task 20: JavaScript program to replace all the numbers with a specified number of a given array of Numbers.</a><br><br>
 </body>
 </html>
