--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Class 5_ All assignments</title>
 </head>
 <body>
-    <a href="/Tasks(5thclass)/task01.html">Task 1: JavaScript program to display the current day and time</a><br><br>
-    <a href="/Tasks(5thclass)/task02.html">Task 2: JavaScript program to get the current date in all 4 formats </a><br><br>
+    <a href="Tasks(5thclass)/task01.html">Task 1: JavaScript program to display the current day and time</a><br><br>
+    <a href="Tasks(5thclass)/task02.html">Task 2: JavaScript program to get the current date in all 4 formats </a><br><br>
     <a href="Tasks(5thclass)/task03.html">Task 3: JavaScript program to find the area of a triangle where lengths of the 
         three of its sides are 5, 6, 7</a><br><br>
     <a href="Tasks(5thclass)/task04.html">Task 4: JavaScript program to rotate the string 'Saylani'</a><br><br>
